# LearnOpenGL

./: CMakeLists.txt  README.txt  clean.sh  run.sh
src/: VAO.h  VBO.h  ball_object.cpp  ball_object.h  config.h  glad.c  glad.h  main.cpp  object.cpp  object.h  resource_manager.cpp  resource_manager.h  shaderClass.cpp  shaderClass.h  shaders.cpp  shaders.h  sprite_render.cpp  sprite_render.h  textures.cpp  textures.h  triangle_mesh.cpp  triangle_mesh.h
src/ODEsolver/: ODEpoint.cpp  ODEpoint.h  ODEsolver.cpp  ODEsolver.h
src/shaders/: fragments.txt  vertex.txt
